@@ -1,6 +1,7 @@
 44
 ================
 
+25/10/20 Include status data with <<AnimalMedicals>>
 23/10/20 Prevent media.delete/expired from removing media
 23/10/20 Stop reset_db from removing media
 22/10/20 QB criteria: date brought in, vacc given/not given #602
